--- a/cv.css
+++ b/cv.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
+/* Define custom colors */
+:root {
+  --color-black: #131842;
+  --color-orange: #e68369;
+  --color-beige: #ecceae;
+  --color-retro: #fbf6e2;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +16,7 @@
 }
 
 body {
-  background: #f9f9f9;
+  background: var(--color-retro);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,7 +81,7 @@ body {
   letter-spacing: 0.1em;
   line-height: 1.2em;
   font-weight: 600;
-  color: #333;
+  color: var(--color-black);
 }
 
 .container .top .profileText h3 span {
@@ -92,11 +100,11 @@ body {
 }
 
 .container .contentBox h3 {
-  border-left: 4px solid #ff8bb3;
+  border-left: 4px solid var(--color-orange);
   padding-left: 10px;
   line-height: 1em;
   font-weight: 600;
-  color: #333;
+  color: var(--color-black);
   letter-spacing: 0.1em;
   margin-bottom: 20px;
   margin-top: 50px;
@@ -111,7 +119,7 @@ body {
   list-style: none;
   margin: 25px 0;
   line-height: 1em;
-  color: #333;
+  color: var(--color-black);
   cursor: pointer;
   display: flex;
 }
@@ -119,12 +127,12 @@ body {
 .container .contentBox ul li ion-icon {
   font-size: 1.2em;
   margin-right: 10px;
-  color: #3590d2;
+  color: var(--color-orange);
 }
 
 .container .contentBox .leftSide ul li .text a {
   text-decoration: none;
-  color: #333;
+  color: var(--color-black);
 }
 
 .container .contentBox ul.qualification li {
@@ -133,11 +141,11 @@ body {
 }
 
 h5 {
-  color: #3590d2;
+  color: var(--color-orange);
 }
 
 h4 {
-  color: #333;
+  color: var(--color-black);
   font-weight: 500;
   margin: 5px 0;
 }
@@ -153,7 +161,7 @@ h6 {
 }
 
 .skills li span {
-  color: #333;
+  color: var(--color-black);
   font-size: 16px;
   font-weight: 500;
 }
@@ -161,12 +169,13 @@ h6 {
 .skills .expertise {
   position: relative;
   width: 100%;
-  background: #e3e3e3;
+  background: var(--color-beige);
   height: 6px;
   margin-top: 15px;
   margin-bottom: 10px;
   display: block;
   overflow: hidden;
+  border-radius: 5px;
 }
 
 .skills .expertise div {
@@ -174,7 +183,8 @@ h6 {
   top: 0;
   left: 0;
   height: 100%;
-  background: #3590d2;
+  background: var(--color-orange);
+  border-radius: 5px;
 }
 
 p {
@@ -199,17 +209,17 @@ p {
 }
 
 .experience .box .yearCompany h5 {
-  color: #333;
+  color: var(--color-black);
   font-weight: 600;
 }
 
 .experience .box .yearCompany h5:nth-child(1) {
-  color: #3590d2;
+  color: var(--color-orange);
 }
 
 .experience .box .text h4,
 .projects .box .text h4 {
-  color: #3590d2;
+  color: var(--color-orange);
   font-size: 16px;
   margin: 0;
 }
@@ -227,5 +237,5 @@ p {
 }
 
 .certifications ul li .issuer {
-  color: #3590d2;
+  color: var(--color-orange);
 }
