--- a/cv.css
+++ b/cv.css
@@ -31,7 +31,6 @@ body {
   margin: 50px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  /* box-shadow: 0 50px 75px rgba(0, 0, 0, 0.1); */
   border-left: 50px solid #fff;
   border-right: 50px solid #fff;
 }
@@ -166,29 +165,46 @@ h6 {
   font-weight: 500;
 }
 
-.skills .expertise {
-  position: relative;
-  width: 100%;
-  background: var(--color-beige);
-  height: 6px;
-  margin-top: 15px;
+.skills .technology {
+  display: flex;
+  align-items: center;
   margin-bottom: 10px;
-  display: block;
-  overflow: hidden;
-  border-radius: 5px;
 }
 
-.skills .expertise div {
+.skills .technology .circle {
+  width: 30px;
+  height: 30px;
+  border: 2px solid var(--color-orange);
+  border-radius: 50%;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.skills .technology .circle .inner-circle {
+  width: 90%;
+  height: 90%;
+  border: 2px solid var(--color-beige);
+  border-radius: 50%;
+  background-color: var(--color-beige);
+  position: relative;
+  overflow: hidden;
+}
+
+.skills .technology .circle .inner-circle .fill {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
   height: 100%;
-  background: var(--color-orange);
-  border-radius: 5px;
+  background-color: var(--color-orange);
+  transform-origin: left;
+  transform: scaleX(0.9);
 }
 
-p {
-  font-style: 300;
+.skills .technology .text {
+  font-size: 16px;
 }
 
 .rightSide {
